@startuml

title __HOME's Class Diagram__\n

  namespace com.journear.app {
    namespace ui {
      namespace home {
        class com.journear.app.ui.home.HomeFragment {
            + onCreateView()
        }
      }
    }
  }
  

  namespace com.journear.app {
    namespace ui {
      namespace home {
        class com.journear.app.ui.home.HomeViewModel {
            - mText : MutableLiveData<String>
            + HomeViewModel()
            + getText()
        }
      }
    }
  }
  

  com.journear.app.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.journear.app.ui.home.HomeFragment o-- com.journear.app.ui.home.HomeViewModel : homeViewModel
  com.journear.app.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
